--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==0.7.5.post2
 blinker==1.3
+blist==1.3.6
 coverage==3.7.1
 Flask==0.10.1
 Flask-Bcrypt==0.6.2
@@ -18,4 +19,5 @@ MarkupSafe==0.23
 python-bcrypt==0.3.1
 SQLAlchemy==0.9.9
 Werkzeug==0.10.4
+wheel==0.24.0
 WTForms==2.0.2
